# zephyr_quadrapod

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: promicro_nrf52840.overlay
modules/leg/: CMakeLists.txt  Kconfig
modules/leg/include/: leg.h
modules/leg/src/: leg.c
modules/leg/zephyr/: module.yml
modules/measurements/src/: measurements.c
modules/move_controller/include/move_controller/: move_controller.h
modules/move_controller/src/: move_controller.c
modules/quadruped/: Kconfig
modules/quadruped/include/quadruped/: quadruped.h
modules/quadruped/src/: quadruped.c
modules/regulator/: CMakeLists.txt
modules/regulator/include/regulator/: regulator.h
modules/regulator/src/: regulator.c
modules/voltage_regulator/: Kconfig
modules/voltage_regulator/src/: voltage_regulator.c
src/: main.c
